docs/api/qiskit/0.24/converters.md
---
title: converters
description: API reference for qiskit.converters
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.converters
---

<span id="module-qiskit.converters" />

<span id="qiskit-converters" />

<span id="circuit-converters-qiskit-converters" />

# Circuit Converters

<span id="module-qiskit.converters" />

`qiskit.converters¶`

|                                                                                                                                                                                 |                                                         |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------- |
| [`circuit_to_dag`](qiskit.converters.circuit_to_dag#qiskit.converters.circuit_to_dag "qiskit.converters.circuit_to_dag")(circuit)                                               | Build a `DAGCircuit` object from a `QuantumCircuit`.    |
| [`dag_to_circuit`](qiskit.converters.dag_to_circuit#qiskit.converters.dag_to_circuit "qiskit.converters.dag_to_circuit")(dag)                                                   | Build a `QuantumCircuit` object from a `DAGCircuit`.    |
| [`circuit_to_instruction`](qiskit.converters.circuit_to_instruction#qiskit.converters.circuit_to_instruction "qiskit.converters.circuit_to_instruction")(circuit\[, …])         | Build an `Instruction` object from a `QuantumCircuit`.  |
| [`circuit_to_gate`](qiskit.converters.circuit_to_gate#qiskit.converters.circuit_to_gate "qiskit.converters.circuit_to_gate")(circuit\[, parameter\_map, …])                     | Build a `Gate` object from a `QuantumCircuit`.          |
| [`ast_to_dag`](qiskit.converters.ast_to_dag#qiskit.converters.ast_to_dag "qiskit.converters.ast_to_dag")(ast)                                                                   | Build a `DAGCircuit` object from an AST `Node` object.  |
| [`dagdependency_to_circuit`](qiskit.converters.dagdependency_to_circuit#qiskit.converters.dagdependency_to_circuit "qiskit.converters.dagdependency_to_circuit")(dagdependency) | Build a `QuantumCircuit` object from a `DAGDependency`. |
| [`circuit_to_dagdependency`](qiskit.converters.circuit_to_dagdependency#qiskit.converters.circuit_to_dagdependency "qiskit.converters.circuit_to_dagdependency")(circuit)       | Build a `DAGDependency` object from a `QuantumCircuit`. |
| [`dag_to_dagdependency`](qiskit.converters.dag_to_dagdependency#qiskit.converters.dag_to_dagdependency "qiskit.converters.dag_to_dagdependency")(dag)                           | Build a `DAGDependency` object from a `DAGCircuit`.     |
| [`dagdependency_to_dag`](qiskit.converters.dagdependency_to_dag#qiskit.converters.dagdependency_to_dag "qiskit.converters.dagdependency_to_dag")(dagdependency)                 | Build a `DAGCircuit` object from a `DAGDependency`.     |

